@@ -18,6 +18,18 @@ Package=<4>
 
 ###############################################################################
 
+Project: "gkdll"=.\gkdll\gkdll.dsp - Package Owner=<4>
+
+Package=<5>
+{{{
+}}}
+
+Package=<4>
+{{{
+}}}
+
+###############################################################################
+
 Project: "glut"=.\drivers\glut\glut.dsp - Package Owner=<4>
 
 Package=<5>
