@@ -23,50 +23,42 @@
 // Boston, MA 02111-1307, USA.
 //
 // -----------------------------------------------------------------
-// File:          $RCSfile: GameApp.h,v $
-// Date modified: $Date: 2002-03-18 05:39:33 $
-// Version:       $Revision: 1.12 $
+// File:          $RCSfile: IGameApp.h,v $
+// Date modified: $Date: 2002-03-18 06:34:55 $
+// Version:       $Revision: 1.1 $
 // -----------------------------------------------------------------
 //
 ////////////////// <GK heading END do not edit this line> ///////////////////
-#ifndef GK_GAMEAPP_H
-#define GK_GAMEAPP_H
+#ifndef GK_IGAMEAPP_H
+#define GK_IGAMEAPP_H
 
-#include "gk/gkCommon.h"
+#include <gk/gkCommon.h>
+#include <gk/DLLInterface.h>
 
 namespace gk {
-   class IGameKernel;
+class IGameKernel;
 
 /**
- * Base game application class for use with the GameKernel. Application writers
- * should derive a class from this and overload the virtual members.
+ * Interface for an application that may be managed by the GameKernel system.
+ * Application writers should implement this interface. It is recommended that
+ * you not actually derive from this interface directly, but instead through
+ * AbstractGameApp which gives default implementations for all methods in the
+ * interface. Thus you only have to override the methods you care about.
  *
- * <h4>Example GameApp Derivation</h4>
+ * <h3>Example: Declaring your app</h3>
  * \code
- *    class MyApp : public GameApp
+ *    class MyApp : public AbstractGameApp
  *    {
- *       virtual ~MyAp();
+ *       virtual ~MyApp();
  *       virtual void onContextDraw( int context );
  *       virtual void onPreFrame();
- *       // other overridden functions if necessary...
+ *       // other overridden functions ...
  *    };
  * \endcode
  */
-class GameApp
+class IGameApp : public Private::DLLInterface
 {
-protected:
-   /**
-    * This class is abstract, you should derive from GameApp instead.
-    */
-   GameApp() {}
-
 public:
-   /**
-    * Destroys this game application object. Implementations should remember to
-    * implement a virtual destructor so destruction works correctly.
-    */
-   virtual ~GameApp() {}
-
    /**
     * This is the draw function. The GameKernel calls this each frame once per
     * window. The context is used to support multiple windows such as what you
@@ -74,26 +66,26 @@ public:
     *
     * @param context    the current OpenGL context
     */
-   virtual void onContextDraw( int context = 0 ) {}
+   virtual void onContextDraw( int context = 0 ) = 0;
 
    /**
     * This is called immediately before onContextDraw(). You may do any
     * application specific pre-frame processing within this function.
     */
-   virtual void onPreFrame() {}
+   virtual void onPreFrame() = 0;
 
    /**
     * This is called during a call to onContextDraw if the GameKernel driver is
     * multi-threaded. Otherwise it's call time is unspecified and may happen
     * either before or after a draw.
     */
-   virtual void onIntraFrame() {}
+   virtual void onIntraFrame() = 0;
 
    /**
     * This is called immediately after onContextDraw(). You may do any
     * application specific post-frame processing within this function.
     */
-   virtual void onPostFrame() {}
+   virtual void onPostFrame() = 0;
 
 // Init methods
 public:
@@ -106,19 +98,19 @@ public:
     *
     * @param kernel     the IGameKernel instance running this app
     */
-   virtual void onAppInit( IGameKernel* kernel) {}
+   virtual void onAppInit( IGameKernel* kernel) = 0;
 
    /**
     * This is called once for each context (window) after the window has been
     * opened, but before the onContextDraw().
     */
-   virtual void onContextInit() {}
+   virtual void onContextInit() = 0;
 
    /**
     * This is called once for each context (window) immediately before the
     * window has been closed.
     */
-   virtual void onContextExit() {}
+   virtual void onContextExit() = 0;
 };
 
 } // namespace gk
